--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,11 @@
 [tool.poetry]
-name = "xrpl-py"
-version = "1.7.0"
+name = "xrpl-py-23"
+version = "0.1.0"
 description = "A complete Python library for interacting with the XRP ledger"
 readme = "README.md"
-repository = "https://github.com/XRPLF/xrpl-py"
+repository = "https://github.com/allelementary/xrpl-py"
 authors = [
-  "Mayukha Vadari <mvadari@ripple.com>",
-  "Greg Weisbrod <gweisbrod@ripple.com>",
-  "Amie Corso <acorso@ripple.com>",
-  "Ted Kalaw <tkalaw@ripple.com>",
-  "Florent Uzio <fuzio@ripple.com>",
-  "Mayur Bhandary <mbhandary@ripple.com>",
-  "Nathan Nichols <nnichols@ripple.com>",
-  "Caleb Kniffen <ckniffen@ripple.com>",
-  "Omar Khan <okhan@ripple.com>"
+  { name="Mikhail Antonov", email="allelementaryfor@gmail.com" },
 ]
 keywords = [
   "xrp",
