--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A complete Python library for interacting with the XRP ledger"
 readme = "README.md"
 repository = "https://github.com/allelementary/xrpl-py"
 authors = [
-  { name="Mikhail Antonov", email="allelementaryfor@gmail.com" },
+  "Mikhail Antonov <allelementaryfor@gmail.com>",
 ]
 keywords = [
   "xrp",
